--- a/payment-app/Dockerfile
+++ b/payment-app/Dockerfile
@@ -1,12 +1,15 @@
-FROM node:16-alpine
+FROM node:21
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN rm -rf node_modules
-RUN npm install
+RUN npm ci
+
 COPY . .
+
 EXPOSE 8000
+
+RUN rm -rf node_modules
 
 CMD [ "npm", "run", "dev" ]
