--- a/ticket-app/docker-compose.yml
+++ b/ticket-app/docker-compose.yml
@@ -5,14 +5,11 @@ services:
     container_name: ticket-db
     image: postgres:16
     hostname: ticket-db
-    ports:
-      - "5432:5432"
     restart: on-failure
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-      PORT: ${PORT}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
@@ -35,6 +32,6 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
-      PORT: ${PORT}
+      PORT: ${TICKET_PORT}
     volumes:
       - .:/app
