--- a/payment-app/docker-compose.yml
+++ b/payment-app/docker-compose.yml
@@ -28,4 +28,5 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     depends_on:
-      - payment-app-db
+      payment-app-db:
+        condition: service_healthy
