chore: fix env vars name

--- a/ticket-app/docker-compose.yml
+++ b/ticket-app/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: ${TICKET_POSTGRES_PASSWORD}
       POSTGRES_DB: ${TICKET_POSTGRES_DB}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: ["CMD-SHELL", "pg_isready -U ${TICKET_POSTGRES_USER} -d ${TICKET_POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
