feat: progress on connecting client endpoints

--- a/client-app/docker-compose.yml
+++ b/client-app/docker-compose.yml
@@ -19,7 +19,9 @@ services:
     volumes:
       - .:/code
     depends_on:
-      - client-app-db
+      client-app-db:
+        condition: service_healthy
+    
 
   client-app-db: 
     container_name: postgres_client_pat
@@ -36,6 +38,11 @@ services:
       - .env
     ports: 
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${CLIENT_POSTGRES_USER} -d ${CLIENT_POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_db:
